[Bug/23] expense is not saved

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -53,7 +53,17 @@
         "points": "Punkte",
         "annotation": "Anmerkung"
       },
-      "setExpense": "Zeitaufwand in Stunden"
+      "confirmDialog": {
+        "message": "Es gibt nicht gespeicherte Änderungen. Trotzdem fortfahren?",
+        "header": "Bestätigung"
+      },
+      "noChangesInfo": "Keine Änderungen",
+      "couldNotSave": "Korrektur konnte nicht gespeichert werden",
+      "saved": "Gespeichert",
+      "hours": "Stunden",
+      "minutes": "Minuten",
+      "expenseSet": "Zeitaufwand eingetragen",
+      "expenseNotSet": "Zeitaufwand nicht eingetragen"
     }
   },
   "home": {
