[Feature/11] validation feedback login

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -9,7 +9,8 @@
     "lbl-username": "Username",
     "lbl-password": "Passwort",
     "title": "Evaluator Login",
-    "submit": "Submit"
+    "submit": "Einloggen",
+    "error": "Ungültiger Benutzername oder Passwort. Bitte versuchen Sie es erneut."
   },
   "shared": {
     "forms": {
