[Feature/12] time-spent/points graph + solved bug in AssignmentInstanceSerializer + refactored serializers.py
resolves #12

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -39,7 +39,9 @@
   "course": {
     "courseView": {
       "title-assignments": "Übungsaufgaben",
-      "title-ranking": "Kurs Ranking"
+      "title-chart": "Statistiken",
+      "chart-expense": "Zeitaufwand",
+      "chart-points": "Punkte"
     },
     "editView": {
       "group": "Gruppe",
