--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -125,6 +125,9 @@
       ],
       "programs": "Studiengänge",
       "empty": "Keine Studiengänge verfügbar"
+    },
+    "tutorHome": {
+      "all": "Alle"
     }
   },
   "settings": {
