[Feature/26] Degree Program Director Views
+ assignment view

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -206,5 +206,14 @@
         "year": "Jahr"
       }
     }
+  },
+  "assignment": {
+    "name": "Bezeichnung",
+    "info": "Änderungen hier betreffen lediglich zukünftige Kursinstanzen.",
+    "title": "Assignment:",
+    "number": "Folgenummer",
+    "points": "Punkte",
+    "draft": "Draft",
+    "example-draft": "Beispiel Draft"
   }
 }
